<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_title_margin"
        android:paddingTop="@dimen/activity_title_margin"
        android:paddingRight="@dimen/activity_title_margin">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/sample_hwlocation_description" />

        <Button
            android:id="@+id/request_location_updates_with_intent"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="requestLocationUpdatesWithIntent"
            android:text="@string/request_location_updates_with_intent" />


        <Button
            android:id="@+id/fuse_location"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="fuseLocation"
            android:text="@string/fuse_location" />

        <Button
            android:id="@+id/mock_location"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setMockLocation"
            android:text="@string/mock_location" />

        <Button
            android:id="@+id/mock_mode"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setMockMode"
            android:text="@string/mock_mode" />

        <Button
            android:id="@+id/locationHD"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="locationHD"
            android:text="@string/location_hd" />

        <Button
            android:id="@+id/lastLocation"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lastLocation"
            android:text="@string/get_last_location" />


        <Button
            android:id="@+id/locationAvailability"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="locationAvailability"
            android:text="@string/hwlocation_getLocationAvailability" />

        <Button
            android:id="@+id/location_activity_update"
            style="@style/ButtonStyle"
            android:onClick="activityUpdate"
            android:text="@string/hwlocation_activity" />

        <Button
            android:id="@+id/location_activity_transition_update"
            style="@style/ButtonStyle"
            android:onClick="activityTransitionUpdate"
            android:text="@string/hwlocation_activity_transition" />

        <Button
            android:id="@+id/geo_fance_location"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="geoFenceLocation"
            android:text="@string/geo_fance" />

        <Button
            android:id="@+id/get_navigation_context_state"
            style="@style/ButtonStyle"
            android:onClick="GetNavigationContextState"
            android:text="@string/hwlocation_activity_getNavigationState" />

        <Button
            android:id="@+id/check_settings"
            style="@style/ButtonStyle"
            android:onClick="checkSettings"
            android:text="@string/check_settings" />

        <Button
            android:id="@+id/write_log"
            style="@style/ButtonStyle"
            android:onClick="writeLog"
            android:text="WriteLog" />

        <Button
            android:id="@+id/geocoder"
            style="@style/ButtonStyle"
            android:onClick="geocoder"
            android:text="geocoder" />
    </LinearLayout>


</ScrollView>